# oculus-vtk

./: .gitignore  CMakeLists.txt  FindOculusSDK.cmake  OVRHelper.cxx  README.md  VTKGLBuffer.cxx  VTKModel.cxx  main.cxx
includes/: OVRBuffers.h  OVRHelper.h  VTKGLBuffer.h  VTKModel.h  definitions.h
resources/shaders/: simple_common.glsl  simple_fragment.glsl  simple_vertex.glsl
shaders/: common.glsl  fragment.glsl  simple_common.glsl  simple_fragment.glsl  simple_vertex.glsl  vertex.glsl
templates/: paths.h.in
